repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__tool_project_by__perform_success_ambiguous_with_autoresolve_json.snap
---
source: repology-webapp/tests/snapshot_tests/tool_project_by.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 302
Header: location: /api/v1/project/iperf2
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 0
---
